# aula_04_bootcamp

./: exercicios.py  listas_e_dicionarios.py  pyproject.toml
