[project]
name = "04-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Augusto",email = "rafael.augustoevangelista01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "04_python", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
